# appointment_system

./: .gitignore  manage.py  pyproject.toml
apps/account/: admin.py  apps.py
apps/account/api_v1/account/serializers/: registration.py
apps/account/api_v1/account/urls/: registration.py
apps/account/api_v1/account/views/: registration.py
apps/account/api_v1/auth/: serializers.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py  0002_emailconfirmationcode.py
apps/account/models/: __init__.py  users.py
apps/account/services/account/: registration.py  verification.py
apps/account/services/auth/: authentication.py  factory.py  token_generator.py
apps/appointment/: apps.py  enums.py
apps/appointment/migrations/: 0001_initial.py
apps/appointment/models/: __init__.py  booking.py  payment.py  review.py  schedule.py
apps/core/: admin.py
apps/core/models/: __init__.py  bases.py  profiles.py  tokens.py
apps/employee/: apps.py  enums.py
apps/employee/migrations/: 0001_initial.py
apps/employee/models/: __init__.py  employees.py
config/: asgi.py  settings.py  urls.py
shared/: pagination.py
