[project]
name = "kitchen-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "django-unfold>=0.74.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-jsonapi[django-filter]>=8.1.0",
    "dotenv>=0.9.9",
    "drf-spectacular[sidecar]",
    "pillow>=12.0.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
]
